# mcp-proxy-studio

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  supervisord.conf
backend/: app.py  schemas.py  settings_store.py
data/: flows.json  settings.json
frontend/: index.html  main.js  styles.css
src/mcp_proxy_studio/: bridge.py
