[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-proxy-studio"
version = "0.0.0"
requires-python = ">=3.9"

[project.scripts]
mcps = "mcp_proxy_studio.bridge:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_proxy_studio"]

[tool.hatch.build]
include = ["bin/mcps.mjs"]
